SyntacticAnalyzer/tests/fail/bloque.java
class foo {

	static int method()
	var int n1, n2;
	{	
		// no esta permitido declarar variables en un bloque
		var int n1, n2;
	}

}
